--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^4.1.3",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1",
