--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "webpack --config webpack.config.babel.js",
     "watch": "webpack-dev-server --allowed-hosts --config webpack.config.babel.js"
   },
-  "main": "dist/js/draftjs-editor",
+  "main": "dist/js/index",
   "author": "ihuangzhu@gmail.com",
   "repository": {
     "type": "git",
