--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1",
@@ -29,15 +29,12 @@
     "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "draft-js": "^0.10.4",
-    "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "spark-md5": "^3.0.0"
+    "redux": "^3.7.2"
   }
 }
