--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
-    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-csso": "^3.0.1",
     "gulp-pug": "^4.0.1",
